Fix up hero spacing

--- a/source/stylesheets/partials/_hero.scss
+++ b/source/stylesheets/partials/_hero.scss
@@ -1,5 +1,8 @@
 .hero {
-  padding: 5em 0;
+  padding: 2em 0;
+  @media (min-width: 500px) {
+    padding: 4em 0;
+  }
 }
 
 .hero-title {
