--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -19,7 +19,7 @@
 
 // flex: 1 ensures content stretches to fill the room it needs
 .page-body {
-  margin-top: 2em;
+  margin-top: 64px;
   margin-bottom: 2em;
   flex: 1;
 }
